--- a/package/lean/luci-theme-argon/luasrc/view/themes/argon/footer.htm
+++ b/package/lean/luci-theme-argon/luasrc/view/themes/argon/footer.htm
@@ -41,7 +41,7 @@
 </div>
 <footer>
 	<div class="ftc">
-		 <a target="_blank" href="http://www.zyzh.cc/">振远路由</a> /
+		 <a target="_blank" href="http://www.zyzh.cc/">ZYZH</a> /
 		<a class="luci-link" href="https://github.com/openwrt/luci">Powered by <%= ver.luciname %>
 			(<%= ver.luciversion %>)</a> /
 		<a href="https://github.com/jerrykuku/luci-theme-argon">ArgonTheme <%# vPKG_VERSION %></a> /
