--- a/package/lean/luci-theme-argon/luasrc/view/themes/argon/header_login.htm
+++ b/package/lean/luci-theme-argon/luasrc/view/themes/argon/header_login.htm
@@ -72,7 +72,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>
-	振远路由<%=striptags(( (node and node.title) and ' - ' .. translate(node.title) or '')) %>
+	<%=striptags( (boardinfo.hostname or "?") .. ( (node and node.title) and ' - ' .. translate(node.title) or '')) %> - LuCI
 	</title>
 	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 	<meta name="format-detection" content="telephone=no, email=no" />
