--- a/package/lean/luci-theme-argon/luasrc/view/themes/argon/sysauth.htm
+++ b/package/lean/luci-theme-argon/luasrc/view/themes/argon/sysauth.htm
@@ -116,7 +116,7 @@
 	<div class="login-container">
 		<div class="login-form">
 			<a class="brand" href="/"><img src="<%=media%>/img/argon.svg" class="icon"><span
-					class="brand-text">振远路由<%=striptags(( (node and node.title) and ' - ' .. translate(node.title) or '')) %></span></a>
+					class="brand-text"><%=striptags( (boardinfo.hostname or "?") .. ( (node and node.title) and ' - ' .. translate(node.title) or '')) %></span></a>
 			<form class="form-login" method="post" action="<%=pcdata(luci.http.getenv("REQUEST_URI"))%>">
 
 				<%- if fuser then %>
